--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name='description' content="A Survey Form - A FreeCodeCamp Challenge project">
-    <meta name='keywords' content="FreeCodeCamp, Survery Form, Responsive Web Design Certification">
+    <meta name='keywords' content="FreeCodeCamp, Survery Form, Responsive Web Design Certification,html5, css3">
     <link rel="stylesheet" href="assets/styles.css">
     <title>Dev Survey Form</title>
 </head>
@@ -83,12 +83,12 @@
                 <h2>Tech Stack</h2>
                 <ul>
                     <li>Html5</li>
-                    <li>CSS</li>
+                    <li>CSS3</li>
                 </ul>
             </div>
             <div id="credits">
                 <h2>Credits</h2>
-                <p>Image from <a href='https://www.unsplash.com'>unsplash</a></p>
+                <p>Photo: <a href='https://www.unsplash.com'>unsplash</a></p>
             </div>
         </div>
                 </footer>
