--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name='description' content="A Survey Form - A FreeCodeCamp Challenge project">
+    <meta name='description' content="This  is a FreeCodeCamp Challenge Project demonstrating proficiency in building a web form. Developed by Joel Kaigarula.">
     <meta name='keywords' content="FreeCodeCamp, Survery Form, Responsive Web Design Certification,html5, css3">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     
     <link rel="stylesheet" href="assets/styles.css">
-    <title>Dev Survey Form</title>
+    <title>Dev Survey Form - FreeCodeCamp Challenge</title>
 </head>
 <body>
     <header id='header'>
@@ -43,7 +43,7 @@
             </div>
             <div>
                 <label for="dropdown" class='form-label'>Role</label>
-                <select name="" id="dropdown" class='form-control'>
+                <select name="role" id="dropdown" class='form-control'>
                     <option value="Front-End">Front-End</option>
                     <option value="Back-End" selected>Back-End</option>
                     <option value="DevOps">DevOps</option>
@@ -71,7 +71,7 @@
                     </fieldset>
 
                 <textarea rows='10' placeholder='Additional comments' name="comments" id="comments" class='form-control'></textarea>
-                <button type='submit'>Submit</button>
+                <button type='submit' id='submit'>Submit</button>
         </form>
             </div>
                
