--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name='description' content="This  is a FreeCodeCamp Challenge Project demonstrating proficiency in building a web form. Developed by Joel Kaigarula.">
     <meta name='keywords' content="FreeCodeCamp, Survery Form, Responsive Web Design Certification,html5, css3">
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="stylesheet" href="assets/styles.css">
     <title>Dev Survey Form - FreeCodeCamp Challenge</title>
 </head>
